yamls/deployment-yaml-extract-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yaml-extract-web-deployment
  labels:
    app: yaml-extract-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yaml-extract-web
  template:
    metadata:
      labels:
        app: yaml-extract-web
    spec:
      containers:
      - name: yaml-extract-web
        image: yaml-extract-web:latest
        ports:
        - containerPort: 5123
        imagePullPolicy: Never
