yamls/ingress-yaml-extract-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yaml-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: yaml-extract.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yaml-extract-service
                port:
                  number: 5123
